added Performance api
